# edroid

./: .gitignore  Cargo.toml  README.md
src/: app.rs  egui_custom.rs  lib.rs  main.rs  repo.rs
