[package]
name = "edroid"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lib]
crate-type = ["cdylib"]

[dependencies]
egui = { version = "0.31" }
winit = { version = "0.30", features = ["android-native-activity"] }
eframe = { version = "0.31", features = ["android-native-activity", "persistence"] }
android_logger = "0.14"
log = "0.4"
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
jni = { version = "0.21", features = ["invocation"] }
ndk-context = "0.1"
futures = "0.3"
futures-util = "0.3"
quick-xml = { version = "0.37", features = ["serialize"] }
simple_logger = "5.0"
zip = "2.2"
parking_lot = { version = "0.12", features = ["serde"] }
itertools = "0.14.0"

[package.metadata.android]
package = "me.avidor.edroid"
build_targets = ["aarch64-linux-android"]
# build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
min_sdk_version = 23
target_sdk_version = 30

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
